[gd_scene load_steps=4 format=3 uid="uid://41niqnirikob"]

[ext_resource type="Script" path="res://pause_menu.gd" id="1_1vndw"]
[ext_resource type="PackedScene" uid="uid://cqx3f4ayahjmc" path="res://scenes/UI/screens/main_pause.tscn" id="2_2nf4w"]
[ext_resource type="PackedScene" uid="uid://2mivuge7xd21" path="res://scenes/UI/screens/options_menu.tscn" id="3_t4puo"]

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1vndw")

[node name="MainPause" parent="." instance=ExtResource("2_2nf4w")]
layout_mode = 1

[node name="OptionsMenu" parent="." instance=ExtResource("3_t4puo")]
visible = false
layout_mode = 1

[connection signal="open_options" from="MainPause" to="." method="_on_main_pause_open_options"]
[connection signal="unpause" from="MainPause" to="." method="_on_main_pause_unpause"]
[connection signal="close_options" from="OptionsMenu" to="." method="_on_options_menu_close_options"]
